[package]
name = "rlox"
version = "0.1.0"
edition = "2021"
authors = ["gh.84kjuqg365@gmail.com"]
description = "Lox interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
